1999-12-17  Michael Natterer  <mitch@gimp.org>

	* app/menus.c
	* app/paths_dialog.c: Minor help system fixes.

	* app/app_procs.c: I thought we should have a real splash (without
	decoration). Like it???

	* app/about_dialog.c
	* app/flip_tool.c
	* app/gradient.c
	* app/levels.c
	* app/measure.c
	* app/text_tool.c
	* app/tools.c
	* app/transform_tool.c: Did some code browsing: I18N fixes,
	s/gtk_window_position/gtk_window_set_position/g, indentation
	paranoia, some g/<type>/g<type>/, various stuff (didn't change any
	logic).

1999-12-17  Shirasaki Yasuhiro  <yasuhiro@gnome.gr.jp>

	* po/POTFILES.in: Added missing app/xinput_airbrush.c.

	* app/perspective_tool.c: Added _() tag.

Thu Dec 16 20:15:25 CET 1999  Olof S Kylander <olof@gimp.org>

	Fix of KDE/Kwm  selection add/sub/inter problem  
	NOTE: This is a workaround, not a real fix. 
	Many Thanks to Matthias Ettrich 

	* app/disp_callbacks.c

	Updated unsharp-mask to version 0.10

	* plug-ins/unsharp/dialog_f.c
	* plug-ins/unsharp/dialog_f.h
	* plug-ins/unsharp/dialog_i.c
	* plug-ins/unsharp/dialog_i.h
	* plug-ins/unsharp/unsharp.c

	Updated print plug-in to version 3.0.1

	* plug-ins/print/README (new file)
	* plug-ins/print/print-escp2.c
	* plug-ins/print/print-pcl.c
	* plug-ins/print/print-ps.c
	* plug-ins/print/print-util.c
	* plug-ins/print/print.c
	* plug-ins/print/print.h

	Updated all files in the help/C/dialogs dir. This is
	a first alpha glimpse of the help system. Please give 
	me feedback of the content. However since it's in alpha
	stage it means that there is spell, grammatical, etc errors. 
	There is may also be pure errors which I hope "you" will
	report to either olof@gimp.org or karin@gimp.org. Please 
	don't report spell, grammatical, etc error at this stage in dev.

	If you have any plans to commit to the help system please write
	to olof@gimp.org. (This is mandatory not a please ;-).

	* help/C/welcome.html
	* help/C/dialogs/about.html
	* help/C/dialogs/border_selection.html